--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
+        "node-sass": "^7.0.1",
         "postcss": "^8.1.14",
-        "sass": "^1.47.0",
-        "sass-loader": "^12.4.0"
+        "sass": "^1.48.0",
+        "sass-loader": "^12.4.0",
+        "webpack": "^5.66.0"
     },
     "dependencies": {
         "bootstrap": "^5.1.3",
