adding vue router

--- a/front/dmsl/package.json
+++ b/front/dmsl/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -27,7 +28,6 @@
     },
     "extends": [
       "plugin:vue/vue3-essential"
-     
     ],
     "rules": {}
   },
@@ -36,5 +36,4 @@
     "last 2 versions",
     "not dead"
   ]
-  
 }
