--- a/front/dmsl/package.json
+++ b/front/dmsl/package.json
@@ -11,7 +11,8 @@
     "@vuelidate/core": "^2.0.0-alpha.34",
     "@vuelidate/validators": "^2.0.0-alpha.26",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
+    "pinia": "^2.0.11",
+    "vue": "^3.2.29",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
@@ -22,7 +23,9 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1"
   },
   "eslintConfig": {
     "root": true,
